Add permutation generation method and update Streams_practice for list handling